--- a/05_cloud/01_SonySales/Code/sonysales/WebContent/css/site_540.css
+++ b/05_cloud/01_SonySales/Code/sonysales/WebContent/css/site_540.css
@@ -22,3 +22,9 @@
 	color: rgb(206, 161, 75);
 	font-family: Droid Sans Fallback;
 }
+
+.text_guide {
+	font-size: 22px;
+	color: rgb(148, 140, 140);
+	font-family: Droid Sans Fallback;
+}
