remove background img

--- a/05_cloud/01_SonySales/Code/sonysales/WebContent/css/common.css
+++ b/05_cloud/01_SonySales/Code/sonysales/WebContent/css/common.css
@@ -38,7 +38,7 @@
 
 .page_background
 {
-    background: url(/img/stamp.png) right bottom no-repeat; 
+    /*background: url(/img/stamp.png) right bottom no-repeat; */
     background-size: 55%; 
 }
 .point_pic_width
