add img for send msg dialog

--- a/05_cloud/01_SonySales/Code/sonysales/WebContent/css/common.css
+++ b/05_cloud/01_SonySales/Code/sonysales/WebContent/css/common.css
@@ -9,6 +9,10 @@
 	font-size: 1.6em;
 }
 
+.text_subHeader_color {
+	color: rgb(34, 191, 242);
+}
+
 .text_mainBody {
 	font-size: 1.6em;
 	color: rgb(62, 62, 62);
