--- a/05_cloud/01_SonySales/Code/sonysales/WebContent/css/common.css
+++ b/05_cloud/01_SonySales/Code/sonysales/WebContent/css/common.css
@@ -74,6 +74,9 @@
 /* 360.css */
 @media screen and (min-device-width:481px) and (max-device-width:540px)
 	and (-webkit-device-pixel-ratio: 1.5) {
+	.scroll_div_height {
+        height: 25%;
+    }
 	.base_font_size {
 		font-size: 10px;
 	}
@@ -82,6 +85,9 @@
 /* 360.css */
 @media screen and (min-device-width:541px) and (max-device-width:720px)
   and (min-device-height:961px) and (-webkit-device-pixel-ratio: 2) {
+  .scroll_div_height {
+        height: 25%;
+    }
     .base_font_size {
         font-size: 10px;
     }
@@ -90,6 +96,9 @@
 /* 360.css */
 @media screen and (min-device-width:721px) and (max-device-width:1080px)
 	and (-webkit-device-pixel-ratio: 3) {
+	.scroll_div_height {
+        height: 25%;
+    }
 	.base_font_size {
 		font-size: 10px;
 	}
